feat(oauth): add insecure_cookie toggle for OAuth cookies
Introduce basic.insecure_cookie (default false) to control the Secure attribute on OAuth CSRF/PKCE cookies for plain HTTP local testing.

Wire the flag through PolluxState into both Gemini CLI and Codex OAuth entry routes, and document the option in config.toml.example and README.

--- a/config.toml.example
+++ b/config.toml.example
@@ -5,6 +5,8 @@ listen_port = 8188
 database_url = "sqlite://data.db"
 loglevel = "info"
 pollux_key = "123"
+# Keep false for HTTPS; set true only when testing OAuth over plain HTTP.
+insecure_cookie = false
 
 # Global defaults for providers (overridden per provider if set).
 [providers.defaults]
